--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -28,3 +28,74 @@
     font-size: 3rem;
 }
 }
+
+#modal { 
+  background-color: rgba(0,0,0,0.85);
+  display: none; 
+  position: fixed; 
+  top: 0;  
+  right: 0;  
+  bottom: 0;  
+  left: 0;  
+  z-index: 2000;
+}
+#modal.show {
+  display: block;
+}
+.modal-content { 
+  height: 100%; 
+  max-width: 105vh;  
+  padding-top: 12vh;
+  margin: 0 auto; 
+  position: relative;
+}
+.modal-content img { 
+  max-width: 100%;
+}
+.modal-close { 
+  cursor: pointer;
+  position: absolute; 
+  right: 0;  
+  top: 0;  
+  padding: 0px 28px 8px;  
+  font-size: 4em; 
+  width: auto; 
+  height: auto; 
+  background: transparent;  
+  border: 0;  
+  outline: none; 
+  color: #ffffff;  
+  z-index: 1000; 
+  font-weight: 100;  
+  line-height: 1;
+}
+body.modal-open { 
+  overflow: hidden;
+  position: fixed;
+}
+
+.header { 
+  height: 320px;
+}
+.header .header-img { 
+  background-repeat: no-repeat;  
+  background-size:  cover;  
+  background-position:  50% 50%;  
+  background-color:  #f5f5f5;  
+  height: 100%;
+}
+.header .header-img button {
+  font-size: 14px;
+  padding: 7px 18px;
+  color: #484848;
+  line-height: 1.43;
+  background: #ffffff;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 1px solid #c4c4c4;
+}
+.header .header-img button.view-photos { 
+  position: absolute; 
+  bottom: 20px; 
+  left: 20px;
+}
