--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2481,4 +2481,24 @@ button {
   margin-bottom:  0;  
 }
 
+.listing-container { 
+  margin: 0 auto; 
+  padding: 0 12px;
+} 
 
+@media (min-width: 744px) { 
+  .listing-container  { 
+    width: 696px;  
+  } 
+} 
+
+.home-container { 
+  margin: 0 auto; 
+  padding: 0 25px; 
+} 
+
+@media (min-width: 1131px) {
+  .home-container { 
+    width: 1080px; 
+  } 
+}
