--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -22,6 +22,27 @@
   text-decoration: none;
 }
 
+#footer { 
+  margin-bottom:  3em;
+}
+#footer .icon { 
+  height: 23px; 
+  display: inline-block; 
+  margin-bottom: -6px;
+}
+.hr { 
+  border-bottom: 1px solid #dbdbdb;  
+  margin: 3em 0;
+}
+#footer p { 
+  font-size: 15px; 
+  color: #767676 !important;
+  display: flex;
+}
+#footer p img {
+  padding-right: 6px;
+}
+
 .about { 
   margin-top: 2em;
 }
