--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -217,21 +217,41 @@ hr {
 .home-container { 
     width:  1080px;
 }
-}
+} 
+
 .listing-summary-group { 
   padding-bottom: 20px;
+}
+.listing-summaries-wrapper { 
+    overflow: hidden;
 }
 .listing-summaries { 
   display: flex; 
   flex-direction: row;  
   justify-content: space-between;  
-  overflow: hidden;
+  transition: transform 0.5s;
 }
 .listing-summaries > .listing-summary { 
   margin-right: 15px;
 }
 .listing-summaries  > .listing-summary:last-child {
   margin-right: 0;
+}
+.listing-carousel { 
+  position: relative;
+}
+.listing-carousel .controls { 
+  display: flex; 
+  justify-content: space-between;
+  position: absolute; 
+  top: calc(50% - 45px);  
+  left: -45px; 
+  width: calc(100% + 90px);
+}
+.listing-carousel .controls .carousel-control {  
+  color: #c5c5c5;  
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
 .listing-summary { 
