Added an ability to change the icon of the ListingSave component, based on the index saved in the Vuex store.

--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -255,7 +255,8 @@ hr {
 }
 
 .listing-summary { 
-  flex: 0 0 auto;
+  flex: 0 0 auto; 
+  position: relative;
 }
 .listing-summary a { 
   text-decoration: none;
@@ -287,4 +288,23 @@ hr {
 .listing-summary .info.address { 
   font-size: 14px;
   line-height: 18px;
+}
+@media (max-width: 400px) {
+.listing-summary .listing-save { 
+    left: 15px; 
+    right: auto;
+}
+}
+
+.listing-save { 
+  position: absolute; 
+  top: 20px; 
+  right: 20px; 
+  cursor: pointer;
+}
+.listing-save .fa-heart { 
+  color:  #ff5a5f;
+}
+.listing-save .fa-heart-o { 
+  color:  #ffffff;
 }
