--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -1,7 +1,7 @@
 
 #toolbar {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #e4e4e4;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
@@ -20,6 +20,34 @@
   display: flex;
   align-items: center; 
   text-decoration: none;
+}
+#toolbar ul { 
+  display: flex; 
+  align-items: center; 
+  list-style: none; 
+  padding: 0 24px 0 0;  
+  margin: 0;
+}
+@media (max-width: 373px) {
+#toolbar ul { 
+    padding-right: 12px;
+}
+}
+#toolbar ul li { 
+  padding: 10px 10px 0 10px;
+}
+#toolbar ul li a { 
+  text-decoration: none; 
+  line-height: 1;  
+  color: inherit;  
+  font-size: 13px; 
+  padding-bottom: 8px;  
+  letter-spacing: 0.5px;
+  cursor: pointer;
+}
+#toolbar ul li a:hover { 
+  border-bottom: 2px solid #484848;  
+  padding-bottom: 6px;
 }
 
 #footer { 
@@ -41,6 +69,80 @@
 }
 #footer p img {
   padding-right: 6px;
+}
+
+#saved .listing-summaries { 
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: left; 
+  overflow: hidden;
+}
+#saved .listing-summaries .listing-summary { 
+  padding-bottom: 30px;
+}
+.listing-summaries > .listing-summary {
+  margin-right: 15px;
+}
+
+.listing-summary { 
+  flex: 0 0 auto; 
+  position: relative;
+}
+.listing-summary a { 
+  text-decoration: none;
+}
+.listing-summary .wrapper { 
+  max-width: 350px;  
+  display: block;
+}
+.listing-summary .thumbnail {
+  width: 350px;  
+  height: 250px;  
+  background-size: cover;  
+  background-position: center;
+}
+.listing-summary .info { 
+  color: #484848;  
+  word-wrap: break-word;
+  letter-spacing: 0.2px;  
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+}
+.listing-summary .info.title { 
+  padding-top: 5px;  
+  font-weight: 700;  
+  font-size: 16px; 
+  line-height: 24px;
+}
+.listing-summary .info.address { 
+  font-size: 14px;
+  line-height: 18px;
+}
+@media (max-width: 400px) {
+.listing-summary .listing-save { 
+    left: 15px; 
+    right: auto;
+}
+}
+
+.listing-save { 
+  position: absolute; 
+  top: 20px; 
+  right: 20px; 
+  cursor: pointer;
+}
+.listing-save .fa-heart { 
+  color:  #ff5a5f;
+}
+.listing-save .fa-heart-o { 
+  color:  #ffffff;
+}
+.listing-save i {
+  padding-right: 4px;
+}
+.listing-save button .fa-heart-o {
+  color: #808080;
 }
 
 .about { 
@@ -153,25 +255,6 @@ body.modal-open {
   left: 20px;
 }
 
-.listing-save { 
-  position: absolute; 
-  top: 20px; 
-  right: 20px; 
-  cursor: pointer;
-}
-.listing-save .fa-heart { 
-  color:  #ff5a5f;
-}
-.listing-save .fa-heart-o { 
-  color:  #ffffff;
-}
-.listing-save i {
-  padding-right: 4px;
-}
-.listing-save button .fa-heart-o {
-  color: #808080;
-}
-
 hr { 
   border: 0; 
   style.cssborder-top: 1px solid #dce0e0;
@@ -273,59 +356,4 @@ hr {
   color: #c5c5c5;  
   font-size: 1.5rem;
   cursor: pointer;
-}
-
-.listing-summary { 
-  flex: 0 0 auto; 
-  position: relative;
-}
-.listing-summary a { 
-  text-decoration: none;
-}
-.listing-summary .wrapper { 
-  max-width: 350px;  
-  display: block;
-}
-.listing-summary .thumbnail {
-  width: 350px;  
-  height: 250px;  
-  background-size: cover;  
-  background-position: center;
-}
-.listing-summary .info { 
-  color: #484848;  
-  word-wrap: break-word;
-  letter-spacing: 0.2px;  
-  white-space: nowrap; 
-  overflow: hidden; 
-  text-overflow: ellipsis;
-}
-.listing-summary .info.title { 
-  padding-top: 5px;  
-  font-weight: 700;  
-  font-size: 16px; 
-  line-height: 24px;
-}
-.listing-summary .info.address { 
-  font-size: 14px;
-  line-height: 18px;
-}
-@media (max-width: 400px) {
-.listing-summary .listing-save { 
-    left: 15px; 
-    right: auto;
-}
-}
-
-#saved .listing-summaries { 
-  display: flex; 
-  flex-wrap: wrap;
-  justify-content: left; 
-  overflow: hidden;
-}
-#saved .listing-summaries .listing-summary { 
-  padding-bottom: 30px;
-}
-.listing-summaries > .listing-summary {
-  margin-right: 15px;
 }
