Implemented OAuth using Passport. Modified codebase to successfully integrate authenticaticated requests.

--- a/public/css/vue-style.css
+++ b/public/css/vue-style.css
@@ -395,3 +395,24 @@ hr {
   padding-top: 12px; 
   padding-bottom: 12px;
 }
+
+.action-link[data-v-5d1d7d82] {
+    cursor: pointer;
+}
+.m-b-none[data-v-5d1d7d82] {
+    margin-bottom: 0;
+}
+
+.action-link[data-v-2ee9fe67] {
+    cursor: pointer;
+}
+.m-b-none[data-v-2ee9fe67] {
+    margin-bottom: 0;
+}
+
+.action-link[data-v-89c53f18] {
+    cursor: pointer;
+}
+.m-b-none[data-v-89c53f18] {
+    margin-bottom: 0;
+}
